--- a/apiVPMP/urls.py.save.1
+++ b/apiVPMP/urls.py.save.1
@@ -10,9 +10,14 @@ urlpatterns = patterns('',
     url(r'^user/(?P<pk>[0-9]+)/$', 'api.views.user_detail'),
     url(r'^report/$', 'api.views.report_list'),
     url(r'^report/(?P<pk>[0-9]+)/$','api.views.report_detail'),
+    url(r'^report/filter/status=(?P<status>\w+)/$','api.views.report_status_filter'),
+    url(r'^report/filter/gender=(?P<gender>\w+)/$','api.views.report_gender_filter'),
+    url(r'^report/filter/state=(?P<state>\w+)/$','api.views.report_state_filter'),
+    url(r'^report/filter/age=(?P<lowerAge>[0-9]+)&(?P<higherAge>[0-9]+)/$','api.views.report_age_filter'),
+    url(r'^report/filter/missing_date=(?P<day>[0-9]{2})&(?P<month>[0-9]{2})&(?P<year>[0-9]{4})/$', 'api.views.report_missingdate_filter'),
     url(r'^report/filter/name=(?P<name>\w+)/$','api.views.report_name_filter'),
     url(r'^user/report/(?P<pk>[0-9]+)/$', 'api.views.user_report_detail'),
-    url(r'^report/filter/missing_date=(?P<year>[0-9\w]+)&(?P<month>[0-9\w]+)&(?P<day>[0-9\w]+)&status=(?P<status>\w+)&state=(?P<state>\w+)&gender=(?P<gender>\w+)&age=(?P<lowerAge>[0-9\w]+)&(?P<higherAge>[0-9\w]+)/$', 'api.views.report_all_filter'),
+    url(r'^report/filter/(?P<status>[0-2]{1})/missing_date=(?P<year>[0-9]{4})-(?P<month>[0-9]{2})-(?P<day>[0-9]{2})&status=(?P<status>\w+)&state=(?P<state>\w+)&age=(?P<lowerAge>[0-9]+)&(?P<higherAge>[0-9]+)/$', 'api.views.report_all_filter'),
     url(r'^report/comment/(?P<pk>[0-9]+)/$', 'api.views.report_comment_detail'),
     url(r'^imageReport/$', 'api.views.imageReport_list'),
     url(r'^imageReport/(?P<pk>[0-9]+)/$', 'api.views.imageReport_detail'),
